--- a/audiophile-e-commerce-website/src/scss/components/Category.scss
+++ b/audiophile-e-commerce-website/src/scss/components/Category.scss
@@ -20,11 +20,12 @@
     &__img {
         display: block;
         position: absolute;
-        width: 45%;
+        height: 80%;
+        object-fit: cover;
         top: -30%;
 
-        @include u.breakpoint('large'){
-            width: 50%;
+        @include u.breakpoint('medium'){
+            top: -25%;
         }
     }
 
