--- a/audiophile-e-commerce-website/src/scss/components/ProductHero.scss
+++ b/audiophile-e-commerce-website/src/scss/components/ProductHero.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     background: var(--hero-mobile) bottom/cover no-repeat;
+    margin-bottom: u.toRem(96);
 
     &__content{
         text-align: center;
